--- a/index.html
+++ b/index.html
@@ -3,9 +3,116 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Countries</title>
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;600;800&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header class="site-header">
+        <div class="container">
+            <div class="site-header-main">
+                <a class="site-header-link" href="index.html">
+                    <h1 class="site-header-title">Where in the world?</h1>
+                </a>
+                <button class="dark-mode">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none">
+                        <path fill="#fff"    fill-rule="evenodd" stroke="#111517" stroke-width="1.25" d="M13.553 13.815c-3.884 0-7.034-2.887-7.034-6.447 0-1.343.448-2.586 1.212-3.618-3.04.945-5.231 3.581-5.231 6.688 0 3.9 3.45 7.062 7.704 7.062 3.389 0 6.266-2.007 7.296-4.796a7.458 7.458 0 0 1-3.947 1.111Z" clip-rule="evenodd"/>
+                    </svg>
+                    <h3>Dark Mode</h3>
+                </button>
+            </div>
+        </div>
+    </header>
 
+    <main class="main">
+        <div class="container">
+            <div class="search-filter">
+                <div class="search">
+                    <input class="search-input" type="search" placeholder="Search for a country…">
+                </div>
+                <div class="filter">
+                    <input list="filter-list" id="filter-name" name="filter-name" placeholder="Filter by Region">
+
+                    <datalist id="filter-list">
+                    <option value="Africa"></option>
+                    <option value="America"></option>
+                    <option value="Asia"></option>
+                    <option value="Europe"></option>
+                    <option value="Oceania"></option>
+                    </datalist>
+                </div>
+            </div>
+
+            <div class="countries-group">
+                <div class="country-flag">
+                    <img class="" src="img//flag-germany.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
+                    <h3 class="country-flag-tittle">Germany</h3>
+                    <p class="country-flag-text"><span class="country-flag-main">Population:</span>81,770,900</p>
+                    <p class="country-flag-text"><span class="country-flag-main">Region:</span>Europe</p>
+                    <p class="country-flag-text"><span class="country-flag-main">Capital:</span>Berlin</p>
+                </div>
+                <div class="country-flag">
+                    <img class="" src="img//flag-germany.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
+                    <h3 class="country-flag-tittle">Germany</h3>
+                    <p class="country-flag-text"><span class="country-flag-main">Population:</span>81,770,900</p>
+                    <p class="country-flag-text"><span class="country-flag-main">Region:</span>Europe</p>
+                    <p class="country-flag-text"><span class="country-flag-main">Capital:</span>Berlin</p>
+                </div>
+                <div class="country-flag">
+                    <img class="" src="img//flag-germany.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
+                    <h3 class="country-flag-tittle">Germany</h3>
+                    <p class="country-flag-text"><span class="country-flag-main">Population:</span>81,770,900</p>
+                    <p class="country-flag-text"><span class="country-flag-main">Region:</span>Europe</p>
+                    <p class="country-flag-text"><span class="country-flag-main">Capital:</span>Berlin</p>
+                </div>
+                <div class="country-flag">
+                    <img class="" src="img//flag-germany.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
+                    <h3 class="country-flag-tittle">Germany</h3>
+                    <p class="country-flag-text"><span class="country-flag-main">Population:</span>81,770,900</p>
+                    <p class="country-flag-text"><span class="country-flag-main">Region:</span>Europe</p>
+                    <p class="country-flag-text"><span class="country-flag-main">Capital:</span>Berlin</p>
+                </div>
+            </div>
+            <div class="countries-group">
+                <div class="country-flag">
+                    <img class="" src="img//flag-germany.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
+                    <h3 class="country-flag-tittle">Germany</h3>
+                    <p class="country-flag-text"><span class="country-flag-main">Population:</span>81,770,900</p>
+                    <p class="country-flag-text"><span class="country-flag-main">Region:</span>Europe</p>
+                    <p class="country-flag-text"><span class="country-flag-main">Capital:</span>Berlin</p>
+                </div>
+                <div class="country-flag">
+                    <img class="" src="img//flag-germany.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
+                    <h3 class="country-flag-tittle">Germany</h3>
+                    <p class="country-flag-text"><span class="country-flag-main">Population:</span>81,770,900</p>
+                    <p class="country-flag-text"><span class="country-flag-main">Region:</span>Europe</p>
+                    <p class="country-flag-text"><span class="country-flag-main">Capital:</span>Berlin</p>
+                </div>
+                <div class="country-flag">
+                    <img class="" src="img//flag-germany.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
+                    <h3 class="country-flag-tittle">Germany</h3>
+                    <p class="country-flag-text"><span class="country-flag-main">Population:</span>81,770,900</p>
+                    <p class="country-flag-text"><span class="country-flag-main">Region:</span>Europe</p>
+                    <p class="country-flag-text"><span class="country-flag-main">Capital:</span>Berlin</p>
+                </div>
+                <div class="country-flag">
+                    <img class="" src="img//flag-germany.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
+                    <h3 class="country-flag-tittle">Germany</h3>
+                    <p class="country-flag-text"><span class="country-flag-main">Population:</span>81,770,900</p>
+                    <p class="country-flag-text"><span class="country-flag-main">Region:</span>Europe</p>
+                    <p class="country-flag-text"><span class="country-flag-main">Capital:</span>Berlin</p>
+                </div>
+            </div>
+        </div>
+    </main>
+
+
+
+    <script src="js/main.js"></script>
 </body>
 </html>
