Add germany.html and custom propirty

--- a/index.html
+++ b/index.html
@@ -50,62 +50,81 @@
 
             <div class="countries-group">
                 <div class="country-flag">
-                    <img class="" src="img//flag-germany.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
-                    <h3 class="country-flag-tittle">Germany</h3>
-                    <p class="country-flag-text"><span class="country-flag-main">Population:</span>81,770,900</p>
-                    <p class="country-flag-text"><span class="country-flag-main">Region:</span>Europe</p>
-                    <p class="country-flag-text"><span class="country-flag-main">Capital:</span>Berlin</p>
+                    <a class="country-flag-link" href="Germany.html">
+                        <img class="country-flag-img" src="img/flag-germany.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
+                        <div class="country-flag-blog">
+                            <h3 class="country-flag-tittle">Germany</h3>
+                            <p class="country-flag-text"><span class="country-flag-main">Population:</span> 81,770,900</p>
+                            <p class="country-flag-text"><span class="country-flag-main">Region:</span> Europe</p>
+                            <p class="country-flag-text"><span class="country-flag-main">Capital:</span> Berlin</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="country-flag">
-                    <img class="" src="img//flag-germany.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
-                    <h3 class="country-flag-tittle">Germany</h3>
-                    <p class="country-flag-text"><span class="country-flag-main">Population:</span>81,770,900</p>
-                    <p class="country-flag-text"><span class="country-flag-main">Region:</span>Europe</p>
-                    <p class="country-flag-text"><span class="country-flag-main">Capital:</span>Berlin</p>
+                    <img class="country-flag-img" src="img/flag-usa.jpg" alt="United States of America bayrog`i" width="267" height="160" srcset="img/flag-usa.jpg 1x, img/flag-usa@2x.jpg 2x">
+                    <div class="country-flag-blog">
+                        <h3 class="country-flag-tittle">United States of America</h3>
+                        <p class="country-flag-text"><span class="country-flag-main">Population:</span> 323,947,000</p>
+                        <p class="country-flag-text"><span class="country-flag-main">Region:</span> Americas</p>
+                        <p class="country-flag-text"><span class="country-flag-main">Capital:</span> Washington D.C</p>
+                    </div>
                 </div>
                 <div class="country-flag">
-                    <img class="" src="img//flag-germany.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
-                    <h3 class="country-flag-tittle">Germany</h3>
-                    <p class="country-flag-text"><span class="country-flag-main">Population:</span>81,770,900</p>
-                    <p class="country-flag-text"><span class="country-flag-main">Region:</span>Europe</p>
-                    <p class="country-flag-text"><span class="country-flag-main">Capital:</span>Berlin</p>
+                    <img class="country-flag-img" src="img/flag-brazil.jpg" alt="Brazilya bayrog`i" width="267" height="160" srcset="img/flag-brazil.jpg 1x, img/flag-brazil@2x.jpg 2x">
+                    <div class="country-flag-blog">
+                        <h3 class="country-flag-tittle">Brazil</h3>
+                        <p class="country-flag-text"><span class="country-flag-main">Population:</span> 206,195,256</p>
+                        <p class="country-flag-text"><span class="country-flag-main">Region:</span> Americas</p>
+                        <p class="country-flag-text"><span class="country-flag-main">Capital:</span> Brasilia</p>
+                    </div>
                 </div>
                 <div class="country-flag">
-                    <img class="" src="img//flag-germany.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
-                    <h3 class="country-flag-tittle">Germany</h3>
-                    <p class="country-flag-text"><span class="country-flag-main">Population:</span>81,770,900</p>
-                    <p class="country-flag-text"><span class="country-flag-main">Region:</span>Europe</p>
-                    <p class="country-flag-text"><span class="country-flag-main">Capital:</span>Berlin</p>
+                    <img class="country-flag-img" src="img/Islandiya.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/Islandiya.jpg 1x, img/Islandiya@2x.jpg 2x">
+                    <div class="country-flag-blog">
+                        <h3 class="country-flag-tittle">Islandiya</h3>
+                        <p class="country-flag-text"><span class="country-flag-main">Population:</span> 334,300</p>
+                        <p class="country-flag-text"><span class="country-flag-main">Region:</span> Europe</p>
+                        <p class="country-flag-text"><span class="country-flag-main">Capital:</span> Reykjavík</p>
+                    </div>
                 </div>
             </div>
+
             <div class="countries-group">
                 <div class="country-flag">
-                    <img class="" src="img//flag-germany.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
-                    <h3 class="country-flag-tittle">Germany</h3>
-                    <p class="country-flag-text"><span class="country-flag-main">Population:</span>81,770,900</p>
-                    <p class="country-flag-text"><span class="country-flag-main">Region:</span>Europe</p>
-                    <p class="country-flag-text"><span class="country-flag-main">Capital:</span>Berlin</p>
+                    <img class="country-flag-img" src="img/Afgoniston.jpg" alt="Afgoniston bayrog`i" width="267" height="160" srcset="img/Afgoniston.jpg 1x, img/Afgoniston@2x.jpg 2x">
+                    <div class="country-flag-blog">
+                        <h3 class="country-flag-tittle">Afg'oniston</h3>
+                        <p class="country-flag-text"><span class="country-flag-main">Population:</span> 27,627,900</p>
+                        <p class="country-flag-text"><span class="country-flag-main">Region:</span> Asia</p>
+                        <p class="country-flag-text"><span class="country-flag-main">Capital:</span> Kobul</p>
+                    </div>
                 </div>
                 <div class="country-flag">
-                    <img class="" src="img//flag-germany.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
-                    <h3 class="country-flag-tittle">Germany</h3>
-                    <p class="country-flag-text"><span class="country-flag-main">Population:</span>81,770,900</p>
-                    <p class="country-flag-text"><span class="country-flag-main">Region:</span>Europe</p>
-                    <p class="country-flag-text"><span class="country-flag-main">Capital:</span>Berlin</p>
+                    <img class="country-flag-img" src="img/Aland.jpg" alt="Aland orollar bayrog`i" width="267" height="160" srcset="img/Aland.jpg 1x, img/Aland@2x.jpg 2x">
+                    <div class="country-flag-blog">
+                        <h3 class="country-flag-tittle">Aland orollari</h3>
+                        <p class="country-flag-text"><span class="country-flag-main">Population:</span> 28.875</p>
+                        <p class="country-flag-text"><span class="country-flag-main">Region:</span> Europe</p>
+                        <p class="country-flag-text"><span class="country-flag-main">Capital:</span> Meriehamn</p>
+                    </div>
                 </div>
                 <div class="country-flag">
-                    <img class="" src="img//flag-germany.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
-                    <h3 class="country-flag-tittle">Germany</h3>
-                    <p class="country-flag-text"><span class="country-flag-main">Population:</span>81,770,900</p>
-                    <p class="country-flag-text"><span class="country-flag-main">Region:</span>Europe</p>
-                    <p class="country-flag-text"><span class="country-flag-main">Capital:</span>Berlin</p>
+                    <img class="country-flag-img" src="img/Albaniya.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/Albaniya.jpg 1x, img/Albaniya@2x.jpg 2x">
+                    <div class="country-flag-blog">
+                        <h3 class="country-flag-tittle">Albaniya</h3>
+                        <p class="country-flag-text"><span class="country-flag-main">Population:</span> 2,886,900</p>
+                        <p class="country-flag-text"><span class="country-flag-main">Region:</span> Europe</p>
+                        <p class="country-flag-text"><span class="country-flag-main">Capital:</span> Tirana</p>
+                    </div>
                 </div>
                 <div class="country-flag">
-                    <img class="" src="img//flag-germany.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
-                    <h3 class="country-flag-tittle">Germany</h3>
-                    <p class="country-flag-text"><span class="country-flag-main">Population:</span>81,770,900</p>
-                    <p class="country-flag-text"><span class="country-flag-main">Region:</span>Europe</p>
-                    <p class="country-flag-text"><span class="country-flag-main">Capital:</span>Berlin</p>
+                    <img class="country-flag-img" src="img/Algeria.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/Algeria.jpg 1x, img/Algeria@2x.jpg 2x">
+                    <div class="country-flag-blog">
+                        <h3 class="country-flag-tittle">Algeria</h3>
+                        <p class="country-flag-text"><span class="country-flag-main">Population:</span> 40,400,900</p>
+                        <p class="country-flag-text"><span class="country-flag-main">Region:</span> Africa</p>
+                        <p class="country-flag-text"><span class="country-flag-main">Capital:</span> Algiers</p>
+                    </div>
                 </div>
             </div>
         </div>
