--- a/Germany.html
+++ b/Germany.html
@@ -10,8 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;600;800&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/Germany.css">
+
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/Germany.css">
 </head>
 <body>
 
@@ -19,13 +20,13 @@
         <div class="container">
             <div class="site-header-main">
                 <a class="site-header-link" href="index.html">
-                    <h1 class="site-header-title">Where in the world?</h1>
+                    Where in the world?
                 </a>
-                <button class="dark-mode">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none">
-                        <path fill="#fff"    fill-rule="evenodd" stroke="#111517" stroke-width="1.25" d="M13.553 13.815c-3.884 0-7.034-2.887-7.034-6.447 0-1.343.448-2.586 1.212-3.618-3.04.945-5.231 3.581-5.231 6.688 0 3.9 3.45 7.062 7.704 7.062 3.389 0 6.266-2.007 7.296-4.796a7.458 7.458 0 0 1-3.947 1.111Z" clip-rule="evenodd"/>
-                    </svg>
-                    <h3>Dark Mode</h3>
+                <button class="dark-mode" type="button">
+                    <span class="dark-mode-inner">
+                        <img class="dark-mode-inner-img" src="img/icon-moon.svg" alt="" width="20" height="20">
+                        <span class="dark-mode-inner-text">Dark Mode</span>
+                    </span>
                 </button>
             </div>
         </div>
