--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,20 +11,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;600;800&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header class="site-header">
         <div class="container">
             <div class="site-header-main">
                 <a class="site-header-link" href="index.html">
-                    <h1 class="site-header-title">Where in the world?</h1>
+                    Where in the world?
                 </a>
-                <button class="dark-mode">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none">
-                        <path fill="#fff"    fill-rule="evenodd" stroke="#111517" stroke-width="1.25" d="M13.553 13.815c-3.884 0-7.034-2.887-7.034-6.447 0-1.343.448-2.586 1.212-3.618-3.04.945-5.231 3.581-5.231 6.688 0 3.9 3.45 7.062 7.704 7.062 3.389 0 6.266-2.007 7.296-4.796a7.458 7.458 0 0 1-3.947 1.111Z" clip-rule="evenodd"/>
-                    </svg>
-                    <h3>Dark Mode</h3>
+                <button class="dark-mode" type="button">
+                    <span class="dark-mode-inner">
+                        <svg class="dark-mode-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20">
+                            <path fill="#fff" fill-rule="evenodd" stroke="currentColor" stroke-width="1.25" d="M13.553 13.815c-3.884 0-7.034-2.887-7.034-6.447 0-1.343.448-2.586 1.212-3.618-3.04.945-5.231 3.581-5.231 6.688 0 3.9 3.45 7.062 7.704 7.062 3.389 0 6.266-2.007 7.296-4.796a7.458 7.458 0 0 1-3.947 1.111Z" clip-rule="evenodd"/>
+                        </svg>
+                        <span class="dark-mode-inner-text">Dark Mode</span>
+                    </span>
                 </button>
             </div>
         </div>
@@ -39,11 +44,11 @@
                     <input list="filter-list" id="filter-name" name="filter-name" placeholder="Filter by Region">
 
                     <datalist id="filter-list">
-                    <option value="Africa"></option>
-                    <option value="America"></option>
-                    <option value="Asia"></option>
-                    <option value="Europe"></option>
-                    <option value="Oceania"></option>
+                        <option value="Africa"></option>
+                        <option value="America"></option>
+                        <option value="Asia"></option>
+                        <option value="Europe"></option>
+                        <option value="Oceania"></option>
                     </datalist>
                 </div>
             </div>
@@ -51,17 +56,20 @@
             <div class="countries-group">
                 <div class="country-flag">
                     <a class="country-flag-link" href="Germany.html">
-                        <img class="country-flag-img" src="img/flag-germany.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
+                        <img class="country-flag-img" src="img/flag-germany.jpg" alt="Germaniya bayrog`i" width="267"
+                            height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
                         <div class="country-flag-blog">
                             <h3 class="country-flag-tittle">Germany</h3>
-                            <p class="country-flag-text"><span class="country-flag-main">Population:</span> 81,770,900</p>
+                            <p class="country-flag-text"><span class="country-flag-main">Population:</span> 81,770,900
+                            </p>
                             <p class="country-flag-text"><span class="country-flag-main">Region:</span> Europe</p>
                             <p class="country-flag-text"><span class="country-flag-main">Capital:</span> Berlin</p>
                         </div>
                     </a>
                 </div>
                 <div class="country-flag">
-                    <img class="country-flag-img" src="img/flag-usa.jpg" alt="United States of America bayrog`i" width="267" height="160" srcset="img/flag-usa.jpg 1x, img/flag-usa@2x.jpg 2x">
+                    <img class="country-flag-img" src="img/flag-usa.jpg" alt="United States of America bayrog`i"
+                        width="267" height="160" srcset="img/flag-usa.jpg 1x, img/flag-usa@2x.jpg 2x">
                     <div class="country-flag-blog">
                         <h3 class="country-flag-tittle">United States of America</h3>
                         <p class="country-flag-text"><span class="country-flag-main">Population:</span> 323,947,000</p>
@@ -70,7 +78,8 @@
                     </div>
                 </div>
                 <div class="country-flag">
-                    <img class="country-flag-img" src="img/flag-brazil.jpg" alt="Brazilya bayrog`i" width="267" height="160" srcset="img/flag-brazil.jpg 1x, img/flag-brazil@2x.jpg 2x">
+                    <img class="country-flag-img" src="img/flag-brazil.jpg" alt="Brazilya bayrog`i" width="267"
+                        height="160" srcset="img/flag-brazil.jpg 1x, img/flag-brazil@2x.jpg 2x">
                     <div class="country-flag-blog">
                         <h3 class="country-flag-tittle">Brazil</h3>
                         <p class="country-flag-text"><span class="country-flag-main">Population:</span> 206,195,256</p>
@@ -79,7 +88,8 @@
                     </div>
                 </div>
                 <div class="country-flag">
-                    <img class="country-flag-img" src="img/Islandiya.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/Islandiya.jpg 1x, img/Islandiya@2x.jpg 2x">
+                    <img class="country-flag-img" src="img/Islandiya.jpg" alt="Germaniya bayrog`i" width="267"
+                        height="160" srcset="img/Islandiya.jpg 1x, img/Islandiya@2x.jpg 2x">
                     <div class="country-flag-blog">
                         <h3 class="country-flag-tittle">Islandiya</h3>
                         <p class="country-flag-text"><span class="country-flag-main">Population:</span> 334,300</p>
@@ -91,7 +101,8 @@
 
             <div class="countries-group">
                 <div class="country-flag">
-                    <img class="country-flag-img" src="img/Afgoniston.jpg" alt="Afgoniston bayrog`i" width="267" height="160" srcset="img/Afgoniston.jpg 1x, img/Afgoniston@2x.jpg 2x">
+                    <img class="country-flag-img" src="img/Afgoniston.jpg" alt="Afgoniston bayrog`i" width="267"
+                        height="160" srcset="img/Afgoniston.jpg 1x, img/Afgoniston@2x.jpg 2x">
                     <div class="country-flag-blog">
                         <h3 class="country-flag-tittle">Afg'oniston</h3>
                         <p class="country-flag-text"><span class="country-flag-main">Population:</span> 27,627,900</p>
@@ -100,7 +111,8 @@
                     </div>
                 </div>
                 <div class="country-flag">
-                    <img class="country-flag-img" src="img/Aland.jpg" alt="Aland orollar bayrog`i" width="267" height="160" srcset="img/Aland.jpg 1x, img/Aland@2x.jpg 2x">
+                    <img class="country-flag-img" src="img/Aland.jpg" alt="Aland orollar bayrog`i" width="267"
+                        height="160" srcset="img/Aland.jpg 1x, img/Aland@2x.jpg 2x">
                     <div class="country-flag-blog">
                         <h3 class="country-flag-tittle">Aland orollari</h3>
                         <p class="country-flag-text"><span class="country-flag-main">Population:</span> 28.875</p>
@@ -109,7 +121,8 @@
                     </div>
                 </div>
                 <div class="country-flag">
-                    <img class="country-flag-img" src="img/Albaniya.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/Albaniya.jpg 1x, img/Albaniya@2x.jpg 2x">
+                    <img class="country-flag-img" src="img/Albaniya.jpg" alt="Germaniya bayrog`i" width="267"
+                        height="160" srcset="img/Albaniya.jpg 1x, img/Albaniya@2x.jpg 2x">
                     <div class="country-flag-blog">
                         <h3 class="country-flag-tittle">Albaniya</h3>
                         <p class="country-flag-text"><span class="country-flag-main">Population:</span> 2,886,900</p>
@@ -118,7 +131,8 @@
                     </div>
                 </div>
                 <div class="country-flag">
-                    <img class="country-flag-img" src="img/Algeria.jpg" alt="Germaniya bayrog`i" width="267" height="160" srcset="img/Algeria.jpg 1x, img/Algeria@2x.jpg 2x">
+                    <img class="country-flag-img" src="img/Algeria.jpg" alt="Germaniya bayrog`i" width="267"
+                        height="160" srcset="img/Algeria.jpg 1x, img/Algeria@2x.jpg 2x">
                     <div class="country-flag-blog">
                         <h3 class="country-flag-tittle">Algeria</h3>
                         <p class="country-flag-text"><span class="country-flag-main">Population:</span> 40,400,900</p>
@@ -134,4 +148,5 @@
 
     <script src="js/main.js"></script>
 </body>
+
 </html>
