--- a/index.html
+++ b/index.html
@@ -36,22 +36,17 @@
 
     <main class="main">
         <div class="container">
-            <div class="search-filter">
-                <div class="search">
-                    <input class="search-input" type="search" placeholder="Search for a country…">
-                </div>
-                <div class="filter">
-                    <input list="filter-list" id="filter-name" name="filter-name" placeholder="Filter by Region">
-
-                    <datalist id="filter-list">
-                        <option value="Africa"></option>
-                        <option value="America"></option>
-                        <option value="Asia"></option>
-                        <option value="Europe"></option>
-                        <option value="Oceania"></option>
-                    </datalist>
-                </div>
-            </div>
+            <form class="search-filter" action="https://echo.htmlacademy.ru" method="GET">
+                <input class="search-input" type="search" name="search" placeholder="Search for a country…" required aria-label="Country name">
+                <select class="region-select" name="region" aria-label="Regions">
+                    <option selected>Filter by Region</option>
+                    <option>Africa</option>
+                    <option>America</option>
+                    <option>Asia</option>
+                    <option>Europe</option>
+                    <option>Oceania</option>
+                </select>
+            </form>
 
             <div class="countries-group">
                 <div class="country-flag">
