--- a/index.html
+++ b/index.html
@@ -36,22 +36,24 @@
 
     <main class="main">
         <div class="container">
-            <form class="search-filter" action="https://echo.htmlacademy.ru" method="GET">
-                <input class="search-input" type="search" name="search" placeholder="Search for a country…" required aria-label="Country name">
-                <select class="region-select" name="region" aria-label="Regions">
-                    <option selected>Filter by Region</option>
-                    <option>Africa</option>
-                    <option>America</option>
-                    <option>Asia</option>
-                    <option>Europe</option>
-                    <option>Oceania</option>
-                </select>
-            </form>
+            <section>
+                <form class="search-filter" action="https://echo.htmlacademy.ru" method="GET">
+                    <input class="search-input" type="search" name="search" placeholder="Search for a country…" required aria-label="Country name">
+                    <select class="region-select" name="region" aria-label="Regions">
+                        <option selected>Filter by Region</option>
+                        <option>Africa</option>
+                        <option>America</option>
+                        <option>Asia</option>
+                        <option>Europe</option>
+                        <option>Oceania</option>
+                    </select>
+                </form>
+            </section>
 
             <div class="countries-group">
                 <div class="country-flag">
                     <a class="country-flag-link" href="Germany.html">
-                        <img class="country-flag-img" src="img/flag-germany.jpg" alt="Germaniya bayrog`i" width="267"
+                        <img class="country-flag-img" src="img/flag-germany.jpg" alt="Germaniya bayrog`i" width="264"
                             height="160" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
                         <div class="country-flag-blog">
                             <h3 class="country-flag-tittle">Germany</h3>
@@ -64,7 +66,7 @@
                 </div>
                 <div class="country-flag">
                     <img class="country-flag-img" src="img/flag-usa.jpg" alt="United States of America bayrog`i"
-                        width="267" height="160" srcset="img/flag-usa.jpg 1x, img/flag-usa@2x.jpg 2x">
+                        width="264" height="160" srcset="img/flag-usa.jpg 1x, img/flag-usa@2x.jpg 2x">
                     <div class="country-flag-blog">
                         <h3 class="country-flag-tittle">United States of America</h3>
                         <p class="country-flag-text"><span class="country-flag-main">Population:</span> 323,947,000</p>
@@ -73,7 +75,7 @@
                     </div>
                 </div>
                 <div class="country-flag">
-                    <img class="country-flag-img" src="img/flag-brazil.jpg" alt="Brazilya bayrog`i" width="267"
+                    <img class="country-flag-img" src="img/flag-brazil.jpg" alt="Brazilya bayrog`i" width="264"
                         height="160" srcset="img/flag-brazil.jpg 1x, img/flag-brazil@2x.jpg 2x">
                     <div class="country-flag-blog">
                         <h3 class="country-flag-tittle">Brazil</h3>
@@ -83,7 +85,7 @@
                     </div>
                 </div>
                 <div class="country-flag">
-                    <img class="country-flag-img" src="img/Islandiya.jpg" alt="Germaniya bayrog`i" width="267"
+                    <img class="country-flag-img" src="img/Islandiya.jpg" alt="Germaniya bayrog`i" width="264"
                         height="160" srcset="img/Islandiya.jpg 1x, img/Islandiya@2x.jpg 2x">
                     <div class="country-flag-blog">
                         <h3 class="country-flag-tittle">Islandiya</h3>
@@ -96,7 +98,7 @@
 
             <div class="countries-group">
                 <div class="country-flag">
-                    <img class="country-flag-img" src="img/Afgoniston.jpg" alt="Afgoniston bayrog`i" width="267"
+                    <img class="country-flag-img" src="img/Afgoniston.jpg" alt="Afgoniston bayrog`i" width="264"
                         height="160" srcset="img/Afgoniston.jpg 1x, img/Afgoniston@2x.jpg 2x">
                     <div class="country-flag-blog">
                         <h3 class="country-flag-tittle">Afg'oniston</h3>
@@ -106,7 +108,7 @@
                     </div>
                 </div>
                 <div class="country-flag">
-                    <img class="country-flag-img" src="img/Aland.jpg" alt="Aland orollar bayrog`i" width="267"
+                    <img class="country-flag-img" src="img/Aland.jpg" alt="Aland orollar bayrog`i" width="264"
                         height="160" srcset="img/Aland.jpg 1x, img/Aland@2x.jpg 2x">
                     <div class="country-flag-blog">
                         <h3 class="country-flag-tittle">Aland orollari</h3>
@@ -116,7 +118,7 @@
                     </div>
                 </div>
                 <div class="country-flag">
-                    <img class="country-flag-img" src="img/Albaniya.jpg" alt="Germaniya bayrog`i" width="267"
+                    <img class="country-flag-img" src="img/Albaniya.jpg" alt="Germaniya bayrog`i" width="264"
                         height="160" srcset="img/Albaniya.jpg 1x, img/Albaniya@2x.jpg 2x">
                     <div class="country-flag-blog">
                         <h3 class="country-flag-tittle">Albaniya</h3>
@@ -126,7 +128,7 @@
                     </div>
                 </div>
                 <div class="country-flag">
-                    <img class="country-flag-img" src="img/Algeria.jpg" alt="Germaniya bayrog`i" width="267"
+                    <img class="country-flag-img" src="img/Algeria.jpg" alt="Germaniya bayrog`i" width="264"
                         height="160" srcset="img/Algeria.jpg 1x, img/Algeria@2x.jpg 2x">
                     <div class="country-flag-blog">
                         <h3 class="country-flag-tittle">Algeria</h3>
