Add country details page

--- a/Germany.html
+++ b/Germany.html
@@ -35,7 +35,7 @@
     <main class="mani">
         <div class="container">
             <a class="back" href="index.html">
-                <svg class="back-img" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"><path fill="#111517" fill-rule="evenodd" d="m6.464 4.107 1.179 1.179-3.89 3.889h14.85v1.65H3.753l3.89 3.889-1.179 1.179L.572 10l5.892-5.893Z" clip-rule="evenodd"/></svg>
+                <svg class="back-img" xmlns="http://www.w3.org/2000/svg" width="20" height="20"><path fill="currentColor" fill-rule="evenodd" d="m6.464 4.107 1.179 1.179-3.89 3.889h14.85v1.65H3.753l3.89 3.889-1.179 1.179L.572 10l5.892-5.893Z" clip-rule="evenodd"/></svg>
                 <p class="back-text">Back</p>
             </a>
             <div class="country-blog">
@@ -73,6 +73,9 @@
             </div>
         </div>
     </main>
+
+
+    <script src="js/main.js"></script>
 
 </body>
 </html>
