--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
         <div class="container">
             <section>
                 <form class="search-filter" action="https://echo.htmlacademy.ru" method="GET">
-                    <input class="search-input" type="search" name="search" placeholder="Search for a country…" required aria-label="Country name">
+                    <div class="search-filter-wrapper">
+                        <svg class="search-filter-icon" width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M12.5 11H11.7L11.4 10.7C12.4 9.6 13 8.1 13 6.5C13 2.9 10.1 0 6.5 0C2.9 0 0 2.9 0 6.5C0 10.1 2.9 13 6.5 13C8.1 13 9.6 12.4 10.7 11.4L11 11.7V12.5L16 17.5L17.5 16L12.5 11ZM6.5 11C4 11 2 9 2 6.5C2 4 4 2 6.5 2C9 2 11 4 11 6.5C11 9 9 11 6.5 11Z" fill="currentColor"/>
+                            </svg>
+                        <input class="search-input" type="search" name="search" placeholder="Search for a country…" required aria-label="Country name">
+                    </div>
                     <select class="region-select" name="region" aria-label="Regions">
                         <option selected>Filter by Region</option>
                         <option>Africa</option>
